--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Delites Logo" height="80" />
+        <img src="images/Logo 1.png" alt="Delites Logo" height="80" />
         <h1>Delites Ice Cream</h1>
         <nav>
             <a href="#menu">Menu</a>
