--- a/index.html
+++ b/index.html
@@ -3,30 +3,29 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Delites Ice Cream Shop</title>
+    
+    <title>Delites</title>
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
     <header>
-        <img src="images/Logo 1.png" alt="Delites Logo" height="80" />
-        <h1>Delites Ice Cream</h1>
-        <nav>
-            <a href="#menu">Menu</a>
-            <a href="#contact">Contact</a>
-            <a href="https://instagram.com/YOURHANDLE" target="_blank">Instagram</a>
-            <!-- Add more links as needed -->
-        </nav>
+        <div class="header-content">
+            <img src="images/Logo 1.png" alt="Delites Logo" height="80" />
+            <div>
+                <h1>Delites</h1>
+                <nav>
+                    <a href="#menu">Menu</a>
+                    <a href="#contact">Contact</a>
+                    <a href="https://instagram.com/delitesuk" target="_blank">Instagram</a>
+                    <!-- Add more links as needed -->
+                </nav>
+            </div>
+        </div>
     </header>
     <main>
-        <section id="menu">
-            <h2>Menu</h2>
-            <ul>
-                <li>
-                    <strong>Classic Vanilla</strong> – £2.50/scoop<br>
-                    Creamy classic vanilla ice cream made fresh daily.
-                </li>
-                <!-- Add more menu items -->
-            </ul>
+        <section id="menu" style="display: flex; gap: 24px; justify-content: center; align-items: flex-start;">
+            <img src="images/menu.svg" alt="Delites Full Menu" style="width:100%;max-width:900px;">
+            <img src="images/back.svg" alt="Delites Menu Back" style="width:100%;max-width:900px;">
         </section>
         <section id="contact">
             <h2>Contact</h2>
