--- a/menu.html
+++ b/menu.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <title>Delites</title>
+    <title>Delites Menu</title>
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
     <header>
         <div class="header-content">
-            <a href="index.html"><img src="images/Logo 1.png" alt="Delites Logo" /></a>
+            <a href="index.html"><img src="images/Logo 1.png" alt="Delites Logo" height="80" /></a>
             <div>
                 <!-- <h1>Delites</h1> -->
                 <nav>
@@ -36,7 +35,10 @@
         </div>
     </header>
     <main>
-        <!-- Menu section removed from index.html -->
+        <section id="menu" style="display: flex; gap: 24px; justify-content: center; align-items: flex-start;">
+            <img src="images/menu.svg" alt="Delites Full Menu" style="width:100%;max-width:900px;">
+            <img src="images/back.svg" alt="Delites Menu Back" style="width:100%;max-width:900px;">
+        </section>
     </main>
     <footer>
         <p>&copy; 2025 Delites</p>
@@ -68,4 +70,4 @@
     });
     </script>
 </body>
-</html>
+</html> 
