--- a/menu.html
+++ b/menu.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <div class="header-content">
-            <a href="index.html"><img src="images/Logo 1.png" alt="Delites Logo" height="80" /></a>
+            <a href="index.html"><img src="images/Logo 1.png" alt="Delites Logo" /></a>
             <div>
-                <!-- <h1>Delites</h1> -->
+                <h1>Delites</h1>
                 <nav>
                     <a href="menu.html">Menu</a>
                     <div class="dropdown" style="display:inline-block;position:relative;">
