--- a/menu.html
+++ b/menu.html
@@ -11,8 +11,9 @@
         <div class="header-content">
             <a href="index.html"><img src="images/Logo 1.png" alt="Delites Logo" /></a>
             <div>
-                <h1>Delites</h1>
+                <!-- <h1>Delites</h1> -->
                 <nav>
+                    <a href="index.html">Home</a>
                     <a href="menu.html">Menu</a>
                     <div class="dropdown" style="display:inline-block;position:relative;">
                         <a href="#" id="delivery-link">Delivery</a>
