--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- Menu section removed from index.html -->
     </main>
     <footer>
-        <p>&copy; 2025 Delites</p>
+        <p>&copy; 2025 Delites V2.1</p>
     </footer>
     <script>
     // Simple JS to toggle the delivery submenu
