--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-content">
-            <a href="index.html"><img src="images/Logo 1.png" alt="Delites Logo" /></a>
+            <a href="index.html"><img src="images/Logo 1.png" alt="Delites Logo" class="logo" /></a>
             <div>
                 <!-- <h1>Delites</h1> -->
                 <button class="burger" aria-label="Open navigation" style="display:none;">
@@ -34,6 +34,7 @@
                         </div>
                     </div>
                     <!-- Add more links as needed -->
+                    <a href="location.html">Location</a>
                 </nav>
             </div>
         </div>
