--- a/location.html
+++ b/location.html
@@ -21,7 +21,7 @@
                         <a href="#" id="delivery-link">Delivery</a>
                         <div class="dropdown-content" id="delivery-menu" style="display:none;position:absolute;left:0;top:100%;background:#fff;box-shadow:0 2px 10px rgba(180,200,220,0.13);border-radius:16px;padding:10px 0;min-width:180px;z-index:10;">
                             <a href="https://www.ubereats.com/gb/store/delites/a_OYKOfSWmO8kttm1AyZsA" id="uber-link">Uber Eats</a>
-                            <a href="https://deliveroo.co.uk/menu/Manchester/salford-crescent/delites-unit-19-willan-industrial-estate?srsltid=AfmBOooCQKbicNVSCacJp5-mFZzqgZnk9BTYquiPt8N-0z9vv_KmzpLL" id="deliveroo-link">Deliveroo</a>
+                            <!--<a href="https://deliveroo.co.uk/menu/Manchester/salford-crescent/delites-unit-19-willan-industrial-estate?srsltid=AfmBOooCQKbicNVSCacJp5-mFZzqgZnk9BTYquiPt8N-0z9vv_KmzpLL" id="deliveroo-link">Deliveroo</a>-->
                             <a href="https://www.just-eat.co.uk/restaurants-delites-salford-salford/menu" id="justeat-link">Just Eat</a>
                         </div>
                     </div>
