Fix typo in location address.

--- a/location.html
+++ b/location.html
@@ -51,7 +51,7 @@
                   referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
                 <p style="text-align:center; margin-top:24px; font-size:1.2rem;">
-                    Address: Delties, W Ashton St, Salford M50 2GR
+                    Address: Delites, W Ashton St, Salford M50 2GR
                 </p>
             </div>
         </main>
